# deed

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt
src/backend/: app.py  config.py  database.py  models.py
src/backend/middleware/: awards_context.py  csrf_middleware copy 2.py  csrf_middleware copy.py  csrf_middleware.py  security_headers.py
src/backend/routers/: __init__.py  associate_business.py  get_routers copy.py  get_routers.py  landowner.py  pages.py  post_routers.py  projects.py
src/backend/static/css/: about_team copy.css  about_team.css  about_team_detail copy.css  about_team_detail.css  associate_business.css  banner.css  career.css  common.css  feedback.css  header.css  meeting.css
src/backend/static/js/: associate_business.js  feedback.js  main copy.js  main.js  slider.js
src/backend/templates/: about copy.html  about_team.html  about_team_detail copy.html  about_team_detail.html  about_team_final.html  about_timeline.html  base.html  blog.html  career copy.html  career.html  contact.html  feedback.html  gallery.html  index.html  landowner.html  privacy.html  royal_club.html  thank_you.html
src/backend/templates/associate-businesses/: detail.html  index.html
src/backend/templates/partials/: _associate_business.html  _awards.html  _banner.html  _footer.html  _header.html  _projects.html  _schedule_meeting.html
src/backend/templates/projects/: detail copy 2.html  detail copy.html  detail.html  index copy.html  index.html
src/core/: config.py  middleware.py
src/utility/: csrf.py  timezone.py
(+23 files in other folders)
