[project]
name = "deed"
version = "1.0.0"
description = "Web application for Deed Real Estate"
authors = [{ name = "MD Anisuzzaman", email = "anisjkb@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "gunicorn>=21.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
    "pytz"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"